262578989263/gaming/templates/deployment-game-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-1
  labels:
    app.kubernetes.io/name: game-1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: gaming
    cloudman.io/user: rmay-struct
  namespace: gaming
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: deployment-game-1-v1-sa
      containers:
        - image: "public.ecr.aws/l6m2t8p7/docker-2048:latest"
          imagePullPolicy: IfNotPresent
          name: game-2048
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
    metadata:
      labels:
        app.kubernetes.io/name: game-1
  selector:
    matchLabels:
      app.kubernetes.io/name: game-1
