262578989263/gaming/templates/service-game-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-1-svc
  namespace: gaming
  labels:
    app.kubernetes.io/name: game-1-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: gaming
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: game-1
