262578989263/gaming/templates/httproute-games1-game-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games1-game-1
  namespace: gaming
  labels:
    app.kubernetes.io/name: games1-game-1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: gaming
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi1
      namespace: infra1
      sectionName: g-api1
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: game-1-svc
          namespace: gaming
          port: 80
  hostnames:
    - game2048.k8s.admin.billingpay.com.br
